# vgmdb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  wsgi.py
.github/workflows/: build.yml
docker/: sv-celery-background  sv-celery-priority
scripts/: album.py  albumlist.py  artist.py  artistlist.py  check_data.py  event.py  eventlist.py  org.py  orglist.py  product.py  productlist.py  release.py  search.py  sellers.py
tests/: _rdf.py  accept.py  album.py  albumlist.py  artist.py  artistlist.py  event.py  eventlist.py  json_schema.py  org.py  org_dogear.html  orglist.html  orglist.py  output.py  product.py  product_attack.html  productlist.py  rdf_album.py  rdf_albumlist.py  rdf_artist.py  rdf_artistlist.py  rdf_event.py  rdf_eventlist.py  rdf_org.py  rdf_orglist.py  rdf_product.py  rdf_productlist.py  rdf_recent.py  rdf_search.py  recent.py  release.py  search.py  utils.py
vgmdb/: _tasks.py  accept.py  autoload_settings.py  cache.py  celery.py  config.py  data.py  fetch.py  local_settings.example.py  main.py  metrics.py  settings.py
vgmdb/output/: __init__.py  commonutils.py  html.py  json.py  jsonl.py  jsonp.py  rdf.py  rdfxml.py  turtle.py  yaml.py
vgmdb/parsers/: album.py  albumlist.py  artist.py  artistlist.py  event.py  eventlist.py  org.py  orglist.py  product.py  productlist.py  recent.py  release.py  search.py  utils.py
vgmdb/sellers/: __init__.py  _tasks.py  _utils.py  amazon.py  cdjapan.py  cdjapan_parse.py  discogs.py  itunes.py  spotify.py
