[project]
name = "vgmdb"
version = "0.1.0"
description = "A custom frontend for vgmdb, providing JSON and RDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amightygirl-paapi5-python-sdk>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "bloom-filter>=1.3.3",
    "bottle>=0.13.4",
    "celery>=5.6.0",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "html5lib>=1.1",
    "isodate>=0.7.2",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "lxml>=6.0.2",
    "pyrdfa3>=3.6.4",
    "python-binary-memcached>=0.31.4",
    "python-memcached>=1.62",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "redis>=7.1.0",
    "simplejson>=3.20.2",
    "statsd-telegraf>=3.2.1.post1",
    "threadpool>=1.3.2",
]
